# complextorch

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  lint.yml  pypi.yml  test.yml
complextorch/: README.md  __init__.py  _cvrandom.py  _cvtensor.py  signal.py
complextorch/datasets/: __init__.py  _registry.py
complextorch/models/: __init__.py  cds.py  kan.py  steinmetz.py  vit.py
complextorch/nn/: __init__.py  functional.py  init.py
complextorch/nn/gauss/: __init__.py  conv.py  linear.py
complextorch/nn/masked/: __init__.py  base.py  conv.py  linear.py
complextorch/nn/modules/: batchnorm.py  casting.py  conv.py  dropout.py  fft.py  frontend.py  groupnorm.py  kan.py  layernorm.py  linear.py  loss.py  manifold.py  mask.py  phase.py  phase_modulation.py  pooling.py  position.py  prototype.py  rmsnorm.py  rnn.py  softmax.py  ssm.py  transformer.py  unitary_rnn.py  upsampling.py
complextorch/nn/modules/activation/: __init__.py  complex_relu.py  fully_complex.py  split_type_A.py  split_type_B.py
complextorch/nn/modules/attention/: __init__.py  eca.py  holographic.py  masked_attention.py  mca.py
complextorch/nn/relevance/: __init__.py  _expi.py  base.py  conv.py  linear.py
complextorch/nn/utils/: __init__.py  sparsity.py
complextorch/transforms/: __init__.py  functional.py  transforms.py
docs/: requirements.txt
docs/source/: _cvrandom.rst  _cvtensor.rst  about.md  about.rst  conf.py  datasets.rst  index.md  index.rst  installation.md  installation.rst  models.rst  nn.rst  signal.rst  transforms.rst
docs/source/_static/: switcher.json
docs/source/_templates/: redirect.html
docs/source/concepts/: activations.md  co-domain-symmetry.md  holographic-attention.md  kan.md  native-vs-gauss.md  positional-encoding.md  state-space-models.md  steinmetz.md  time-frequency-frontends.md  unitary-rnn.md
docs/source/examples/: getting_started.md  index.md
docs/source/nn/: functional.rst  init.rst  masked.rst  modules.rst  relevance.rst  utils.rst
docs/source/nn/modules/: activation.rst  attention.rst  batchnorm.rst  casting.rst  conv.rst  dropout.rst  fft.rst  groupnorm.rst  layernorm.rst  linear.rst  loss.rst  manifold.rst  mask.rst  phase.rst  pooling.rst  rmsnorm.rst  rnn.rst  softmax.rst  transformer.rst  upsampling.rst
docs/source/nn/modules/activation/: complex_relu.rst  fully_complex.rst  split_type_A.rst  split_type_B.rst
docs/source/nn/modules/attention/: eca.rst  masked_attention.rst  mca.rst
src/complextorch/: __init__.py  _cvrandom.py
src/complextorch/nn/: __init__.py
src/complextorch/nn/modules/: batchnorm.py  conv.py  dropout.py  fft.py  layernorm.py  linear.py  loss.py  mask.py  softmax.py
src/complextorch/nn/modules/activation/: complex_relu.py  fully_complex.py  split_type_A.py
src/complextorch/nn/modules/attention/: __init__.py  eca.py
tests/: conftest.py  test_package.py  test_signal.py
tests/datasets/: test_enums.py  test_sample.py  test_slc.py  test_stubs.py
tests/invariants/: test_casting_roundtrip.py  test_equivariance.py  test_fast_slow_equivalence.py  test_fft_roundtrip.py  test_native_gauss_equivalence.py  test_polar_roundtrip.py  test_ssm_kernel.py  test_stft_roundtrip.py
tests/models/: test_cds.py  test_kan.py  test_steinmetz.py  test_vit.py
tests/nn/: test_functional.py  test_init.py
tests/nn/gauss/: test_conv.py  test_linear.py
tests/nn/masked/: test_base.py  test_layers.py
tests/nn/modules/: test_batchnorm.py  test_casting.py  test_conv.py  test_dropout.py  test_fft.py  test_frontend.py  test_groupnorm.py  test_kan.py  test_layernorm.py  test_linear.py  test_loss.py  test_manifold.py  test_mask.py  test_phase.py  test_phase_modulation.py  test_pooling.py  test_position.py  test_prototype.py  test_rmsnorm.py  test_rnn.py  test_softmax.py  test_ssm.py  test_transformer.py  test_unitary_rnn.py  test_upsampling.py
tests/nn/modules/activation/: test_complex_relu.py  test_fully_complex.py  test_split_type_a.py  test_split_type_b.py
tests/nn/modules/attention/: test_attention.py  test_eca.py  test_holographic.py  test_mca.py
tests/nn/relevance/: test_base.py  test_expi.py  test_layers.py
tests/nn/utils/: test_sparsity.py
tests/transforms/: test_functional.py  test_transforms.py
