[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complextorch"
dynamic = ["version"]
description = "A lightweight complex-valued neural network package built on PyTorch"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Josiah W. Smith", email = "josiah.radar@gmail.com"},
]
keywords = ["deep learning", "pytorch", "complex valued neural networks"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.2.0",
    "torch>=2.1.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/josiahwsmith10/complextorch"
Documentation = "https://josiahwsmith10.github.io/complextorch/latest/"
Repository = "https://github.com/josiahwsmith10/complextorch"
"Bug Tracker" = "https://github.com/josiahwsmith10/complextorch/issues"
Changelog = "https://github.com/josiahwsmith10/complextorch/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docs = [
    # The whole stack is pinned to Sphinx 7 because sphinx-multiversion 0.2.4
    # is incompatible with Sphinx >= 8 (Config.read signature changed).
    # myst-parser >= 5 / myst-nb >= 2 require Sphinx >= 8, so they are also
    # pinned. Migrate to sphinx-polyversion to unblock these floors.
    "sphinx>=7.3,<8",
    "pydata-sphinx-theme>=0.15,<0.16",
    "myst-parser>=3.0,<5",
    "myst-nb>=1.1,<2",
    "sphinx-autoapi>=3.3,<4",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6,<0.7",
    "sphinx-multiversion>=0.2",
    "sphinx-sitemap>=2.6",
    "sphinxext-opengraph>=0.9",
    "matplotlib>=3.7",
]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "hypothesis>=6",
]
# Tooling for contributors: linter/formatter + pre-commit driver.
dev = [
    "ruff>=0.15",
    "pre-commit>=4",
]
# SAR + MRI dataset readers (PolSAR, MICCAI cardiac cine MRI, etc.)
datasets = [
    "h5py>=3.7",
]
# ALOS-2 CEOS-format reader (needs system-level GDAL via rasterio)
datasets-alos = [
    "rasterio>=1.3",
]

[tool.setuptools.dynamic]
version = {attr = "complextorch.__version__"}

[tool.setuptools.packages.find]
include = ["complextorch", "complextorch.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --strict-markers --strict-config -ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
branch = false
source = ["complextorch"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["docs/source/_build"]

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle errors + warnings
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear (likely bugs)
    "UP",      # pyupgrade (modern Python syntax)
    "SIM",     # flake8-simplify
    "RUF",     # ruff-specific
    "C4",      # flake8-comprehensions
    "PT",      # pytest-style
    "PIE",     # flake8-pie
    "RET",     # flake8-return
    "TCH",     # flake8-type-checking
]
ignore = [
    "E501",    # line-too-long — handled by the formatter
]
# `×` (U+00D7) is intentional math notation in docstrings/comments (e.g. "2×2 whitening").
allowed-confusables = ["×"]

[tool.ruff.lint.per-file-ignores]
# Public API surface — manual import grouping is intentional; __all__ is the contract.
"complextorch/nn/__init__.py" = ["I001"]
"complextorch/nn/modules/activation/__init__.py" = ["I001"]
# Sphinx conf reads version before sys.path tweaks; keep authorial layout.
"docs/source/conf.py" = ["I001"]
